# quikleaf

./: .gitignore  CLAUDE.md  LICENSE  README.md  agents.md  index.html  llms.txt  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.e2e.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
dev/: qdedit-spec.md  qudown-spec.md  quikdown-comparison.md  quikleaf-spec.md  signing-setup.md
docs/: architecture.md  index.html  llm-integration.md  project-mode.md
e2e/: about-modal.spec.ts  app-init.spec.ts  chat-panel.spec.ts  chat-resizer.spec.ts  chat-slash-commands.spec.ts  file-menu.spec.ts  file-tree.spec.ts  settings-modal.spec.ts
e2e/mocks/: tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-fs.ts  tauri-shell.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/qdedit/: README.md  install.js  package.json
npm/qudown/: README.md  install.js  package.json
npm/quikleaf/: README.md  install.js  package.json
npm/win32-x64/: package.json
pages/: index.html
pages/scripts/: site.js
pages/styles/: qdedit-site.css  qudown-site.css  quikleaf-site.css
src/: main.test.ts  main.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  llm.rs  mod.rs  project.rs
src/chat/: chat-ui.test.ts  chat-ui.ts  chat-utils.test.ts  chat-utils.ts  providers.ts  (+1 more)
tools/: check-deps.cjs  checkVersion.cjs  feature.sh  release.sh
(+6 files in other folders)
