[package]
name = "qdedit"
version = "0.1.0"
edition = "2021"
description = "A standalone local markdown editor with rich rendering and LLM support"

[lib]
name = "qdedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qdedit"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
