[package]
name = "qudown"
version = "0.1.0"
edition = "2021"
description = "A standalone local markdown editor with rich rendering and LLM support"

[lib]
name = "qudown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qudown"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
